test/must_fail/stack_deeper.ngjs
#!/usr/bin/env ngspicejs
// Deeper stack test
// linter: ngspicejs-lint
"use strict";

function foo() {
    diode({name: "D1", anode: 4, cathode: 3, model: '1N4148'});
    diode({name: "D2", anode: 4, cathode: 3, model: '1N4148'});
    return '12x'.fromEng();
}

function bar() {
    foo();
}

tran();
bar();
